# mini_dwh

./: .gitignore  Dockerfile  README.md  cleanup_duckdb.py  dagster_pipeline.py  docker-compose.yml  fetch_commodity_prices.py  fetch_seeds.py  login_and_pull.sh  orchestrator.py  pipeline_config.yml  prefect_flow.py  pyproject.toml  register_deployments.py  register_model.py  requirements.txt  run_pipeline.py  run_recommendations.py  s3_utils.py  superset_config.py  utils.py
bots/: alpaca.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/bronze/: commodity_prices_bronze.sql  orders_bronze.sql  stg_commodity_prices.sql  stg_game_stats.sql  stg_games.sql  stg_news.sql  stg_player_stats.sql  stg_players.sql  stg_stock_prices.sql  stg_teams.sql  stg_weather.sql  users_bronze.sql
dbt/models/gold/: agri_buy_signals.sql  commodity_price_signals.sql  daily_market_data.sql  player_efficiency.sql  player_game_facts.sql  sales_by_country.sql
dbt/models/silver/: commodity_prices.sql  commodity_prices_daily.sql  daily_weather.sql  game_stats.sql  games.sql  news.sql  player_stats.sql  players.sql  stock_prices.sql  teams.sql  weather.sql  wheat_weather.sql
dbt/seeds/raw/: orders.csv
mini_dwh_dbt/: dbt_project.yml  profiles.yml
mini_dwh_dbt/models/: schema.yml
notebooks/: analysis.ipynb
recommendations/: recommender.py
sources/: README.md  __init__.py  basketball.py  commodities.py  exchange_rates.py  finance.py  stocks.py  weather.py  weather_forecast.py  world_bank.py
tests/: test_alpaca.py  test_recommendations.py  test_utils.py
(+4 files in other folders)
