[tool.poetry]
name = "mini-dwh"
version = "0.1.0"
description = "Mini data warehouse example using DuckDB and dbt"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "*"
schedule = "*"
dbt-core = "*"
dbt-duckdb = "*"
prefect = "*"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
