[tool.poetry]
name = "mini-dwh"
version = "0.1.0"
description = "Mini data warehouse example using PostgreSQL and dbt"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
schedule = "*"
dbt-core = "*"
dbt-postgres = "*"
prefect = "*"
pandas = "*"
yfinance = "*"
psycopg2-binary = "*"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
