[tool.poetry]
name = "dwh"
version = "0.1.0"
description = "Data warehouse example using DuckDB and dbt"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "*"
dagster = "*"
dagster-webserver = "*"
dbt-core = "*"
dbt-duckdb = "*"
requests = "*"
pandas = "*"
pyyaml = "*"
jupyter = "*"
plotly = "*"

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
